must-gather.local.5022534670626055853/registry-redhat-io-openshift-service-mesh-istio-must-gather-rhel8-sha256-4f65e564ad1ba0b86c140668c833c753dae7bd2def50c6e88c4afb7e45148870/namespaces/istio-system/networking.istio.io/destinationrules/disable-mtls-jaeger-collector.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.istio.io/v1beta1","kind":"DestinationRule","metadata":{"annotations":{"maistra.io/mesh-generation":"2.3.2-1-5"},"labels":{"app":"jaeger","app.kubernetes.io/component":"tracing","app.kubernetes.io/instance":"istio-system","app.kubernetes.io/managed-by":"maistra-istio-operator","app.kubernetes.io/name":"tracing","app.kubernetes.io/part-of":"istio","app.kubernetes.io/version":"2.3.2-1-5","maistra-version":"2.3.2","maistra.io/owner":"istio-system","maistra.io/owner-na [...]
    maistra.io/mesh-generation: 2.3.2-1-5
  creationTimestamp: "2023-03-24T17:28:23Z"
  generation: 1
  labels:
    app: jaeger
    app.kubernetes.io/component: tracing
    app.kubernetes.io/instance: istio-system
    app.kubernetes.io/managed-by: maistra-istio-operator
    app.kubernetes.io/name: tracing
    app.kubernetes.io/part-of: istio
    app.kubernetes.io/version: 2.3.2-1-5
    maistra-version: 2.3.2
    maistra.io/owner: istio-system
    maistra.io/owner-name: basic
    release: istio
  name: disable-mtls-jaeger-collector
  namespace: istio-system
  ownerReferences:
  - apiVersion: maistra.io/v2
    blockOwnerDeletion: true
    controller: true
    kind: ServiceMeshControlPlane
    name: basic
    uid: ea62ab37-de81-47cf-a7a3-ecf2986a0b2f
  resourceVersion: "886094"
  uid: a6629e98-d3be-4513-8016-a78bced97ad1
spec:
  host: jaeger-collector.istio-system.svc
  trafficPolicy:
    tls:
      mode: DISABLE
status:
  conditions:
  - lastProbeTime: "2023-03-24T18:24:34.878903205Z"
    lastTransitionTime: "2023-03-24T18:24:34.878903416Z"
    message: 36/36 proxies up to date.
    status: "True"
    type: Reconciled
  observedGeneration: "1"
