must-gather.local.5022534670626055853/registry-redhat-io-openshift-service-mesh-istio-must-gather-rhel8-sha256-4f65e564ad1ba0b86c140668c833c753dae7bd2def50c6e88c4afb7e45148870/namespaces/istio-system/networking.istio.io/destinationrules/istiod-basic.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.istio.io/v1beta1","kind":"DestinationRule","metadata":{"annotations":{"maistra.io/mesh-generation":"2.3.2-1-5"},"labels":{"app":"istiod","app.kubernetes.io/component":"istio-discovery","app.kubernetes.io/instance":"istio-system","app.kubernetes.io/managed-by":"maistra-istio-operator","app.kubernetes.io/name":"istio-discovery","app.kubernetes.io/part-of":"istio","app.kubernetes.io/version":"2.3.2-1-5","istio":"pilot","istio.io/rev":"basic","maistra-version":"2.3.2" [...]
    maistra.io/mesh-generation: 2.3.2-1-5
  creationTimestamp: "2023-03-24T17:28:10Z"
  generation: 1
  labels:
    app: istiod
    app.kubernetes.io/component: istio-discovery
    app.kubernetes.io/instance: istio-system
    app.kubernetes.io/managed-by: maistra-istio-operator
    app.kubernetes.io/name: istio-discovery
    app.kubernetes.io/part-of: istio
    app.kubernetes.io/version: 2.3.2-1-5
    istio: pilot
    istio.io/rev: basic
    maistra-version: 2.3.2
    maistra.io/owner: istio-system
    maistra.io/owner-name: basic
    release: istio
  name: istiod-basic
  namespace: istio-system
  ownerReferences:
  - apiVersion: maistra.io/v2
    blockOwnerDeletion: true
    controller: true
    kind: ServiceMeshControlPlane
    name: basic
    uid: ea62ab37-de81-47cf-a7a3-ecf2986a0b2f
  resourceVersion: "886098"
  uid: 8379929d-f4f6-45c5-b395-ac199001750e
spec:
  host: istiod-basic.istio-system.svc.cluster.local
  trafficPolicy:
    portLevelSettings:
    - port:
        number: 8188
      tls:
        mode: SIMPLE
status:
  conditions:
  - lastProbeTime: "2023-03-24T18:24:34.888533509Z"
    lastTransitionTime: "2023-03-24T18:24:34.888533691Z"
    message: 36/36 proxies up to date.
    status: "True"
    type: Reconciled
  observedGeneration: "1"
  validationMessages:
  - documentationUrl: https://istio.io/v1.14/docs/reference/config/analysis/ist0129/
    level: WARNING
    type:
      code: IST0129
